--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="dev.sebastiano.bundel">
+    package="dev.sebastiano.bundel"
+    android:sharedUserId="dev.sebastiano.bundel.uid">
 
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
