--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,6 +42,7 @@ lifecycleViewmodelCompose = "2.4.0"
 navigationCompose = "2.4.0-rc01"
 protobuf = "3.19.1"
 room = "2.4.0"
+splashscreen = "1.0.0-alpha02"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
 
@@ -59,6 +60,7 @@ androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-juni
 androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "composeUiTestManifest" }
 androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
 androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 androidx-glance = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
 androidx-hilt-hiltCommon = { module = "androidx.hilt:hilt-common", version.ref = "hilt" }
