--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -50,12 +50,12 @@ androidx-activity-activityCompose = { module = "androidx.activity:activity-compo
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 androidx-compose-compiler = "androidx.compose.compiler:compiler:1.1.0-rc02"
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
+androidx-compose-material = { module = "androidx.compose.material:material", version = "1.1.0-rc01" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 androidx-compose-materialIconsExtended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeMaterialIconsExt" }
 androidx-compose-runtimeLivedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeRuntimeLivedata" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
+androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version = "1.1.0-rc01" }
 androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "composeUiTestManifest" }
 androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
 androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
@@ -71,11 +71,11 @@ androidx-navigation-navigationCompose = { module = "androidx.navigation:navigati
 androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
-androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
+androidx-test-core = { module = "androidx.test:core", version = "1.4.1-alpha03" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
 androidx-test-orchestrator = { module = "androidx.test:orchestrator", version.ref = "androidxTest" }
-androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidxTest" }
+androidx-test-rules = { module = "androidx.test:rules", version = "1.4.1-alpha03" }
 androidx-test-services = { module = "androidx.test.services:test-services", version.ref = "androidxTestServices" }
 androidx-test-uiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
 assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assertk" }
