--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:name=".BundelApplication"
-        android:theme="@style/Bundel.Theme"
+        android:theme="@style/Bundel.Captain.Vadim"
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/full_backup_rules"
