--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
 accompanist = "0.22.0-rc"
 activityCompose = "1.4.0"
-androidxTest = "1.4.1"
+androidxTest = "1.4.1-alpha03"
 androidxTestExt = "1.1.4-alpha03"
 androidxTestServices = "1.4.1"
-appCompat = "1.4.0"
+appCompat = "1.4.1"
 assertk = "0.25"
 coil = "2.0.0-alpha06"
-compose = "1.1.0-rc02"
-composeMaterial3 = "1.0.0-alpha02"
-composeMaterialIconsExt = "1.1.0-rc01"
-composeRuntimeLivedata = "1.1.0-rc01"
-composeUiTestManifest = "1.1.0-rc01"
-composeUiTooling = "1.1.0-rc01"
+compose = "1.2.0-alpha01"
+composeMaterial3 = "1.0.0-alpha03"
+composeMaterialIconsExt = "1.2.0-alpha01"
+composeRuntimeLivedata = "1.2.0-alpha01"
+composeUiTestManifest = "1.2.0-alpha01"
+composeUiTooling = "1.2.0-alpha01"
 daggerHilt = "2.40.5"
 datastore = "1.0.0"
 desugar = "1.1.5"
@@ -23,14 +23,12 @@ gradlePlugins-agp = "7.2.0-alpha07"
 gradlePlugins-crashlytics = "2.8.1"
 gradlePlugins-detekt = "1.19.0"
 gradlePlugins-gms = "4.3.10"
-gradlePlugins-hilt = "2.40.5"
 gradlePlugins-junit5 = "1.8.2.0"
 gradlePlugins-kotlinter = "3.8.0"
 gradlePlugins-ksp = "1.6.10-1.0.2"
 gradlePlugins-protobuf = "0.8.18"
-gradlePlugins-shot = "5.12.1"
-gradlePlugins-versionCatalog = "0.2.1"
-gradlePlugins-versionsBenManes = "0.39.0"
+gradlePlugins-versionCatalog = "0.2.2"
+gradlePlugins-versionsBenManes = "0.41.0"
 hilt = "1.0.0"
 hiltLifecycleViewmodel = "1.0.0-alpha03"
 hiltNavigationCompose = "1.0.0-rc01"
@@ -40,23 +38,23 @@ kotlinCoroutines = "1.6.0"
 lifecycle = "2.4.0"
 lifecycleViewmodelCompose = "2.4.0"
 navigationCompose = "2.4.0-rc01"
-protobuf = "3.19.1"
-room = "2.4.0"
-splashscreen = "1.0.0-alpha02"
+protobuf = "3.19.3"
+room = "2.4.1"
+splashscreen = "1.0.0-beta01"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
 
 [libraries]
 androidx-activity-activityCompose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
-androidx-compose-compiler = "androidx.compose.compiler:compiler:1.1.0-rc02"
+androidx-compose-compiler = "androidx.compose.compiler:compiler:1.2.0-alpha01"
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-androidx-compose-material = { module = "androidx.compose.material:material", version = "1.1.0-rc01" }
+androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "composeMaterialIconsExt" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 androidx-compose-materialIconsExtended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeMaterialIconsExt" }
 androidx-compose-runtimeLivedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeRuntimeLivedata" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version = "1.1.0-rc01" }
+androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "composeUiTooling" }
 androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "composeUiTestManifest" }
 androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
 androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
@@ -73,11 +71,11 @@ androidx-navigation-navigationCompose = { module = "androidx.navigation:navigati
 androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
-androidx-test-core = { module = "androidx.test:core", version = "1.4.1-alpha03" }
+androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
 androidx-test-orchestrator = { module = "androidx.test:orchestrator", version.ref = "androidxTest" }
-androidx-test-rules = { module = "androidx.test:rules", version = "1.4.1-alpha03" }
+androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidxTest" }
 androidx-test-services = { module = "androidx.test.services:test-services", version.ref = "androidxTestServices" }
 androidx-test-uiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
 assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assertk" }
@@ -103,9 +101,9 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 [bundles]
 accompanist = ["google-accompanistFlowLayout", "google-accompanistNavAnimations", "google-accompanistNavMaterial", "google-accompanistSystemUIController"]
 androidxTestUtils = ["androidx-test-orchestrator", "androidx-test-services"]
-compose = ["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material3", "androidx-compose-material", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui"]
-composeUiTooling = ["androidx-compose-ui-uiTooling", "androidx-compose-ui-uiTooling-preview"]
+compose = ["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material", "androidx-compose-material3", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui"]
 composeTest = ["androidx-compose-ui-uiTest-junit4", "androidx-compose-ui-uiTest-manifest", "androidx-test-core", "androidx-test-espresso-core", "androidx-test-ext-junit", "androidx-test-rules"]
+composeUiTooling = ["androidx-compose-ui-uiTooling", "androidx-compose-ui-uiTooling-preview"]
 datastore = ["androidx-datastore", "google-protobuf-javalite"]
 firebase = ["google-firebase-analytics-ktx", "google-firebase-crashlytics-ktx"]
 hilt = ["androidx-hilt-hiltCommon", "androidx-hilt-hiltLifecycleViewmodel", "google-dagger-dagger", "google-dagger-hiltAndroid"]
@@ -119,12 +117,10 @@ android-junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "gradleP
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "gradlePlugins-crashlytics" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "gradlePlugins-detekt" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "gradlePlugins-gms" }
-hilt = { id = "dagger.hilt.android.plugin", version.ref = "gradlePlugins-hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinter = { id = "org.jmailen.kotlinter", version.ref = "gradlePlugins-kotlinter" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "gradlePlugins-ksp" }
 protobuf = { id = "com.google.protobuf", version.ref = "gradlePlugins-protobuf" }
-shot = { id = "shot", version.ref = "gradlePlugins-shot" }
 versionCatalogUpdate = { id = "nl.littlerobots.version-catalog-update", version.ref = "gradlePlugins-versionCatalog" }
 versionsBenManes = { id = "com.github.ben-manes.versions", version.ref = "gradlePlugins-versionsBenManes" }
