--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,11 @@ activityCompose = "1.4.0"
 androidxTest = "1.4.1"
 androidxTestExt = "1.1.4-alpha03"
 androidxTestServices = "1.4.1"
-appCompat = "1.4.0"
+appCompat = "1.4.1"
 assertk = "0.25"
 coil = "2.0.0-alpha06"
 compose = "1.1.0-rc02"
-composeMaterial3 = "1.0.0-alpha02"
+composeMaterial3 = "1.0.0-alpha03"
 composeMaterialIconsExt = "1.1.0-rc01"
 composeRuntimeLivedata = "1.1.0-rc01"
 composeUiTestManifest = "1.1.0-rc01"
@@ -30,7 +30,7 @@ gradlePlugins-ksp = "1.6.10-1.0.2"
 gradlePlugins-protobuf = "0.8.18"
 gradlePlugins-shot = "5.12.1"
 gradlePlugins-versionCatalog = "0.2.2"
-gradlePlugins-versionsBenManes = "0.39.0"
+gradlePlugins-versionsBenManes = "0.41.0"
 hilt = "1.0.0"
 hiltLifecycleViewmodel = "1.0.0-alpha03"
 hiltNavigationCompose = "1.0.0-rc01"
@@ -40,9 +40,9 @@ kotlinCoroutines = "1.6.0"
 lifecycle = "2.4.0"
 lifecycleViewmodelCompose = "2.4.0"
 navigationCompose = "2.4.0-rc01"
-protobuf = "3.19.1"
-room = "2.4.0"
-splashscreen = "1.0.0-alpha02"
+protobuf = "3.19.3"
+room = "2.4.1"
+splashscreen = "1.0.0-beta01"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
 
