--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,25 @@
 [versions]
-accompanist = "0.22.0-rc"
+accompanist = "0.24.1-alpha"
 activityCompose = "1.4.0"
 androidxTest = "1.4.1"
 androidxTestExt = "1.1.4-alpha03"
 androidxTestServices = "1.4.1"
 appCompat = "1.4.1"
 assertk = "0.25"
-coil = "2.0.0-alpha06"
-compose = "1.1.0-rc02"
-composeMaterial3 = "1.0.0-alpha03"
-composeMaterialIconsExt = "1.1.0-rc01"
-composeRuntimeLivedata = "1.1.0-rc01"
-composeUiTestManifest = "1.1.0-rc01"
-composeUiTooling = "1.1.0-rc01"
+coil = "2.0.0-alpha08"
+compose = "1.1.0"
+composeMaterial3 = "1.0.0-alpha05"
+composeMaterialIconsExt = "1.1.0"
+composeRuntimeLivedata = "1.1.0"
+composeUiTestManifest = "1.1.0"
+composeUiTooling = "1.1.0"
 daggerHilt = "2.40.5"
 datastore = "1.0.0"
 desugar = "1.1.5"
 espresso-core = "3.5.0-alpha03"
-firebaseBom = "29.0.3"
-glance = "1.0.0-alpha01"
-gradlePlugins-agp = "7.2.0-alpha07"
+firebaseBom = "29.0.4"
+glance = "1.0.0-alpha02"
+gradlePlugins-agp = "7.3.0-alpha02"
 gradlePlugins-crashlytics = "2.8.1"
 gradlePlugins-detekt = "1.19.0"
 gradlePlugins-gms = "4.3.10"
@@ -28,19 +28,19 @@ gradlePlugins-junit5 = "1.8.2.0"
 gradlePlugins-kotlinter = "3.8.0"
 gradlePlugins-ksp = "1.6.10-1.0.2"
 gradlePlugins-protobuf = "0.8.18"
-gradlePlugins-shot = "5.12.1"
-gradlePlugins-versionCatalog = "0.2.2"
-gradlePlugins-versionsBenManes = "0.41.0"
+gradlePlugins-shot = "5.13.0"
+gradlePlugins-versionCatalog = "0.3.0"
+gradlePlugins-versionsBenManes = "0.42.0"
 hilt = "1.0.0"
 hiltLifecycleViewmodel = "1.0.0-alpha03"
-hiltNavigationCompose = "1.0.0-rc01"
+hiltNavigationCompose = "1.0.0"
 junit = "5.8.2"
 kotlin = "1.6.10"
 kotlinCoroutines = "1.6.0"
-lifecycle = "2.4.0"
-lifecycleViewmodelCompose = "2.4.0"
-navigationCompose = "2.4.0-rc01"
-protobuf = "3.19.3"
+lifecycle = "2.4.1"
+lifecycleViewmodelCompose = "2.4.1"
+navigationCompose = "2.5.0-alpha02"
+protobuf = "3.19.4"
 room = "2.4.1"
 splashscreen = "1.0.0-beta01"
 timber = "5.0.1"
@@ -49,14 +49,14 @@ uiAutomator = "2.2.0"
 [libraries]
 androidx-activity-activityCompose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
-androidx-compose-compiler = "androidx.compose.compiler:compiler:1.1.0-rc02"
+androidx-compose-compiler = "androidx.compose.compiler:compiler:1.1.0"
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-androidx-compose-material = { module = "androidx.compose.material:material", version = "1.1.0-rc01" }
+androidx-compose-material = { module = "androidx.compose.material:material", version = "1.1.0" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 androidx-compose-materialIconsExtended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeMaterialIconsExt" }
 androidx-compose-runtimeLivedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeRuntimeLivedata" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version = "1.1.0-rc01" }
+androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version = "1.1.0" }
 androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "composeUiTestManifest" }
 androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
 androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
@@ -103,9 +103,9 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 [bundles]
 accompanist = ["google-accompanistFlowLayout", "google-accompanistNavAnimations", "google-accompanistNavMaterial", "google-accompanistSystemUIController"]
 androidxTestUtils = ["androidx-test-orchestrator", "androidx-test-services"]
-compose = ["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material3", "androidx-compose-material", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui"]
-composeUiTooling = ["androidx-compose-ui-uiTooling", "androidx-compose-ui-uiTooling-preview"]
+compose = ["androidx-compose-compiler", "androidx-compose-foundation", "androidx-compose-material", "androidx-compose-material3", "androidx-compose-materialIconsExtended", "androidx-compose-runtimeLivedata", "androidx-compose-ui"]
 composeTest = ["androidx-compose-ui-uiTest-junit4", "androidx-compose-ui-uiTest-manifest", "androidx-test-core", "androidx-test-espresso-core", "androidx-test-ext-junit", "androidx-test-rules"]
+composeUiTooling = ["androidx-compose-ui-uiTooling", "androidx-compose-ui-uiTooling-preview"]
 datastore = ["androidx-datastore", "google-protobuf-javalite"]
 firebase = ["google-firebase-analytics-ktx", "google-firebase-crashlytics-ktx"]
 hilt = ["androidx-hilt-hiltCommon", "androidx-hilt-hiltLifecycleViewmodel", "google-dagger-dagger", "google-dagger-hiltAndroid"]
