--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,32 +1,32 @@
 [versions]
-accompanist = "0.24.1-alpha"
-activityCompose = "1.4.0"
-androidxTest = "1.4.1"
-androidxTestExt = "1.1.4-alpha03"
+accompanist = "0.24.2-alpha"
+activityCompose = "1.5.0-alpha03"
+androidxTest = "1.4.1-alpha04"
+androidxTestExt = "1.1.4-alpha04"
 androidxTestServices = "1.4.1"
 appCompat = "1.4.1"
 assertk = "0.25"
-coil = "2.0.0-alpha08"
-compose = "1.2.0-alpha03"
-composeMaterial3 = "1.0.0-alpha05"
-composeMaterialIconsExt = "1.2.0-alpha03"
-composeRuntimeLivedata = "1.2.0-alpha03"
-composeUiTestManifest = "1.2.0-alpha03"
-composeUiTooling = "1.2.0-alpha03"
-daggerHilt = "2.40.5"
+coil = "2.0.0-alpha09"
+compose = "1.2.0-alpha04"
+composeMaterial3 = "1.0.0-alpha06"
+composeMaterialIconsExt = "1.2.0-alpha04"
+composeRuntimeLivedata = "1.2.0-alpha04"
+composeUiTestManifest = "1.2.0-alpha04"
+composeUiTooling = "1.1.1"
+daggerHilt = "2.41"
 datastore = "1.0.0"
 desugar = "1.1.5"
-espresso-core = "3.5.0-alpha03"
-firebaseBom = "29.0.4"
-glance = "1.0.0-alpha02"
+espresso-core = "3.5.0-alpha04"
+firebaseBom = "29.1.0"
+glance = "1.0.0-alpha03"
 gradlePlugins-agp = "7.3.0-alpha03"
 gradlePlugins-crashlytics = "2.8.1"
 gradlePlugins-detekt = "1.19.0"
 gradlePlugins-gms = "4.3.10"
-gradlePlugins-hilt = "2.40.5"
+gradlePlugins-hilt = "2.41"
 gradlePlugins-junit5 = "1.8.2.0"
-gradlePlugins-kotlinter = "3.8.0"
-gradlePlugins-ksp = "1.6.10-1.0.2"
+gradlePlugins-kotlinter = "3.9.0"
+gradlePlugins-ksp = "1.6.10-1.0.4"
 gradlePlugins-protobuf = "0.8.18"
 gradlePlugins-shot = "5.13.0"
 gradlePlugins-versionCatalog = "0.3.0"
@@ -37,11 +37,11 @@ hiltNavigationCompose = "1.0.0"
 junit = "5.8.2"
 kotlin = "1.6.10"
 kotlinCoroutines = "1.6.0"
-lifecycle = "2.4.1"
-lifecycleViewmodelCompose = "2.4.1"
-navigationCompose = "2.5.0-alpha02"
+lifecycle = "2.5.0-alpha03"
+lifecycleViewmodelCompose = "2.5.0-alpha03"
+navigationCompose = "2.5.0-alpha03"
 protobuf = "3.19.4"
-room = "2.4.1"
+room = "2.4.2"
 splashscreen = "1.0.0-beta01"
 timber = "5.0.1"
 uiAutomator = "2.2.0"
@@ -51,12 +51,12 @@ androidx-activity-activityCompose = { module = "androidx.activity:activity-compo
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose" }
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-androidx-compose-material = { module = "androidx.compose.material:material", version = "1.1.0" }
+androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "composeMaterialIconsExt" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 androidx-compose-materialIconsExtended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeMaterialIconsExt" }
 androidx-compose-runtimeLivedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "composeRuntimeLivedata" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version = "1.1.0" }
+androidx-compose-ui-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "composeUiTooling" }
 androidx-compose-ui-uiTest-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "composeUiTestManifest" }
 androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
 androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
@@ -73,11 +73,11 @@ androidx-navigation-navigationCompose = { module = "androidx.navigation:navigati
 androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
-androidx-test-core = { module = "androidx.test:core", version = "1.4.1-alpha03" }
+androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
 androidx-test-orchestrator = { module = "androidx.test:orchestrator", version.ref = "androidxTest" }
-androidx-test-rules = { module = "androidx.test:rules", version = "1.4.1-alpha03" }
+androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidxTest" }
 androidx-test-services = { module = "androidx.test.services:test-services", version.ref = "androidxTestServices" }
 androidx-test-uiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
 assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assertk" }
